--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>React Pages Boilerplate</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/react-pages-boilerplate/icons-15ce0df4e3cd3ba24663efe197267acb/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/react-pages-boilerplate/icons-15ce0df4e3cd3ba24663efe197267acb/favicon-16x16.png"><link rel="shortcut icon" href="/react-pages-boilerplate/icons-15ce0df4e3cd3ba24663efe197267acb/favicon.ico"><link href="/react-pages-boilerplate/main.css" rel="stylesheet"></head>
   <body>
+    <noscript>
+      Enable JavaScript to see content on this page
+    </noscript>
+    
     <div id="app"></div>
   <script type="text/javascript" src="/react-pages-boilerplate/bundle.js"></script></body>
 </html>
